@@ -1,0 +1,5 @@
+<RCC>
+	<qresource>
+		<file alias="OpenSLES">OpenSLES.png</file>
+	</qresource>
+</RCC>
