@@ -1,4 +1,5 @@
-Changes in QMPlay2 build 15.06.21:
+Changes in QMPlay2 build 15.06.23:
+	- OpenSLES audio output (e.g. for Android),
 	- minor slider fixes,
 
 Zmiany w QMPlay2 build 15.06.06:
